--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "tsensembler"]
+	path = tsensembler
+	url = https://github.com/vcerqueira/tsensembler
+	shallow = true
+	registered = true
